--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -8,12 +8,13 @@ components:
     name: text_area_17_copy_copy_copy_copy
     properties:
       font_size: 10
-      height: 55
+      height: 100.91665649414062
       text: |-
         29/4 Laget adminbilde for vedlikehold av badges og propt til disse
         La inn mulighet for poeng pr. 8000 skritt
         Laget adminbilde for å se utdelte badges
         La til plassering i laget i info som sendes til AI
+        La til animering ved bytte av uke
     type: TextArea
   - layout_properties: {grid_position: 'CKYAQZ,ZKDBAY'}
     name: text_area_17_copy_copy_copy
