--- a/client_code/PoengVelger/form_template.yaml
+++ b/client_code/PoengVelger/form_template.yaml
@@ -121,6 +121,10 @@ components_by_slot:
       name: column_panel_1
       properties: {}
       type: ColumnPanel
+    - layout_properties: {grid_position: 'CDBUEO,XHAFKO'}
+      name: text_1
+      properties: {align: right, text: 'Du må enten registrere skritt eller treningsøkt. Ikke begge deler. '}
+      type: form:dep_91t3sowbnwbk:_Components.Text
     - components:
       - event_bindings: {click: angre_button_click}
         layout_properties: {}
