--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -628,7 +628,7 @@ components_by_slot:
         properties: {align: center}
         type: FlowPanel
       layout_properties: {grid_position: 'GNBEBU,VSYDAR'}
-      name: outlined_card_1
+      name: progress_card
       properties:
         background: theme:Secondary Container
         role: elevated-card
