Created icons8-trophy-80.png; Edited Loggbok, Resultat_individuell.RowTemplate2, ServerModule1, endringslogg and 1 more

--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -101,6 +101,10 @@ components:
     name: badge_9
     properties: {height: '20', source: _/theme/icons8-third-64.png, tooltip: '', visible: false}
     type: Image
+  - layout_properties: {}
+    name: badge_10
+    properties: {height: '20', source: _/theme/icons8-trophy-80.png, tooltip: '', visible: false}
+    type: Image
   layout_properties: {column: PFFFKV}
   name: badge_flow_panel
   properties: {align: left, visible: true}
