--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -139,6 +139,11 @@ components_by_slot:
           name: badge_9
           properties: {height: '30', source: _/theme/icons8-third-64.png, tooltip: '', visible: false}
           type: Image
+        - event_bindings: {}
+          layout_properties: {}
+          name: badge_10
+          properties: {height: '30', source: _/theme/icons8-trophy-80.png, tooltip: '', visible: false}
+          type: Image
         layout_properties: {grid_position: 'IRRDUT,AHFGFP FIYLJB,VPKGHN'}
         name: badge_flow_panel
         properties: {align: center, visible: false}
