--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -6,7 +6,12 @@ components:
     type: Label
   - layout_properties: {grid_position: 'ZKRXXP,THLMNF'}
     name: text_area_17_copy_copy_copy_copy_copy
-    properties: {font_size: 10, height: 30.818206787109375, text: 30/4 Laget en badge nr 10.}
+    properties:
+      font_size: 10
+      height: 30.818206787109375
+      text: |-
+        30/4 Laget en badge nr 10.
+        Laget rutine for initiell liga-fordeling
     type: TextArea
   - layout_properties: {grid_position: 'DVOSAK,KDDOER'}
     name: text_area_17_copy_copy_copy_copy
