--- a/anvil.yaml
+++ b/anvil.yaml
@@ -114,6 +114,9 @@ db_schema:
     - admin_ui: {order: 4, width: 200}
       name: korrigering
       type: bool
+    - admin_ui: {order: 5, width: 200}
+      name: antall_deltagere
+      type: number
     server: full
     title: Konkurranse
   leages:
