--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -20,8 +20,220 @@ components_by_slot:
         - name: navn_textbox
           properties: {}
           type: TextBox
-        layout_properties: {grid_position: 'GUEZGH,DUVYCS'}
+        layout_properties: {grid_position: 'BKGLUF,WHBSER'}
         name: flow_panel_3
+        properties: {align: center}
+        type: FlowPanel
+      - layout_properties: {grid_position: 'JPTIVN,OWBUEU'}
+        name: text_1
+        properties: {align: center, text: Bruk ditt ekte navn hvis du vil ha gevinst}
+        type: form:dep_91t3sowbnwbk:_Components.Text
+      - components:
+        - components:
+          - components:
+            - name: text_2
+              properties: {text: 'Poeng:'}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - name: poeng
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_7
+            properties:
+              align: center
+              gap: small
+              spacing:
+                padding: ['20', null, null, null]
+              spacing_above: none
+              spacing_below: none
+              vertical_align: full
+            type: FlowPanel
+          - components:
+            - layout_properties: {}
+              name: text_4
+              properties: {text: 'Bonus:'}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - name: bonus
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_8
+            properties: {align: center}
+            type: FlowPanel
+          - components:
+            - layout_properties: {}
+              name: text_3
+              properties: {text: 'Lengste streak:'}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - name: longest_streak
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_9
+            properties:
+              align: center
+              spacing:
+                padding: [null, '20', null, '20']
+            type: FlowPanel
+          - components:
+            - layout_properties: {}
+              name: text_5
+              properties: {text: 'Score:'}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - name: score
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_10
+            properties: {align: center}
+            type: FlowPanel
+          - components:
+            - layout_properties: {}
+              name: text_6
+              properties: {text: 'Plassering:'}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - name: plassering
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_11
+            properties: {align: center}
+            type: FlowPanel
+          layout_properties: {expand: false}
+          name: card_1
+          properties: {appearance: elevated, background_color: '', border: '', role: null}
+          type: form:dep_91t3sowbnwbk:_Components.Card
+        - components:
+          - event_bindings: {mouse_down: badge_1_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+            layout_properties: {width: 30}
+            name: badge_1
+            properties: {height: '30', source: _/theme/icons8-three-leaf-clover-48.png, tooltip: Trippel Aktiv, visible: false}
+            type: Image
+          - event_bindings: {mouse_down: badge_2_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+            layout_properties: {width: 30}
+            name: badge_2
+            properties: {height: '30', source: _/theme/icons8-777-48.png, tooltip: Seventh heaven, visible: false}
+            type: Image
+          - event_bindings: {mouse_down: badge_3_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+            layout_properties: {width: 30}
+            name: badge_3
+            properties: {height: '30', source: _/theme/icons8-triathlon-64.png, tooltip: Triathlon, visible: false}
+            type: Image
+          - event_bindings: {mouse_down: badge_4_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+            layout_properties: {width: 30}
+            name: badge_4
+            properties: {height: '30', source: _/theme/icons8-habit-64.png, tooltip: Habit Master, visible: false}
+            type: Image
+          - event_bindings: {mouse_down: badge_5_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+            layout_properties: {width: 30}
+            name: badge_5
+            properties: {height: '30', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
+            type: Image
+          - event_bindings: {mouse_down: badge_6_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+            layout_properties: {width: 30}
+            name: badge_6
+            properties: {height: '30', source: _/theme/icons8-weekend-48.png, tooltip: Weekend Warrior, visible: false}
+            type: Image
+          - event_bindings: {}
+            layout_properties: {width: 30}
+            name: badge_7
+            properties: {height: '30', source: _/theme/icons8-first-48.png, tooltip: '', visible: false}
+            type: Image
+          - event_bindings: {}
+            layout_properties: {}
+            name: badge_8
+            properties: {height: '30', source: _/theme/icons8-second-place-ribbon-48.png, tooltip: '', visible: false}
+            type: Image
+          - event_bindings: {}
+            layout_properties: {}
+            name: badge_9
+            properties: {height: '30', source: _/theme/icons8-third-64.png, tooltip: '', visible: false}
+            type: Image
+          - event_bindings: {}
+            layout_properties: {}
+            name: badge_10
+            properties: {height: '30', source: _/theme/icons8-trophy-80.png, tooltip: '', visible: false}
+            type: Image
+          name: badge_flow_panel
+          properties: {align: center, visible: false}
+          type: FlowPanel
+        layout_properties: {grid_position: 'WEIOEQ,LXHNIZ'}
+        name: flow_panel_2
+        properties: {align: center}
+        type: FlowPanel
+      layout_properties: {grid_position: 'ODZXPL,GWISSY'}
+      name: outlined_card_4
+      properties: {role: elevated-card}
+      type: ColumnPanel
+    - components:
+      - components:
+        - components:
+          - components:
+            - layout_properties: {}
+              name: text_2_copy
+              properties: {text: Team}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - name: team
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_7_copy
+            properties:
+              align: center
+              gap: small
+              spacing:
+                padding: ['20', null, null, null]
+              spacing_above: none
+              spacing_below: none
+              vertical_align: full
+            type: FlowPanel
+          - components:
+            - layout_properties: {}
+              name: text_3_copy
+              properties: {text: Min plassering i team}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - layout_properties: {}
+              name: plassering_i_team
+              properties: {text: plassering_i_team}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_9_copy
+            properties:
+              align: center
+              spacing:
+                padding: [null, '20', null, '20']
+            type: FlowPanel
+          - components:
+            - layout_properties: {}
+              name: text_5_copy
+              properties: {text: 'Team score:'}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - layout_properties: {}
+              name: team_score
+              properties: {text: team_score}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_10_copy
+            properties: {align: center}
+            type: FlowPanel
+          - components:
+            - layout_properties: {}
+              name: text_6_copy
+              properties: {text: 'Team plassering:'}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - name: team_plassering
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: flow_panel_11_copy
+            properties: {align: center}
+            type: FlowPanel
+          layout_properties: {}
+          name: card_1_copy
+          properties: {align: center, appearance: elevated, background_color: '', border: '', role: null}
+          type: form:dep_91t3sowbnwbk:_Components.Card
+        layout_properties: {grid_position: 'FXQKIZ,LQOMPT'}
+        name: flow_panel_12
         properties: {align: center}
         type: FlowPanel
       - components:
@@ -29,17 +241,22 @@ components_by_slot:
           - name: team_medl_repeating_panel
             properties: {item_template: team_medlemmer.RowTemplate4}
             type: RepeatingPanel
+          layout_properties: {}
           name: data_grid_1
           properties:
             columns:
             - {data_key: column_1, id: JKSDUP, title: Teammedlemmer}
             - {data_key: column_1, id: MHDFRT, title: Poeng}
+            - {data_key: column_1, id: JXEGFN, title: Bonus}
+            - {data_key: column_1, id: ALHQYW, title: Lengste streak}
+            - {data_key: column_1, id: CSRZJF, title: Score}
+            - {data_key: column_1, id: BGCHQZ, title: Kikk}
           type: DataGrid
-        layout_properties: {grid_position: 'BMMPDP,JZFHOE'}
+        layout_properties: {grid_position: 'KSRTCG,OPCCJE'}
         name: rich_text_2
         properties:
           align: center
-          content: Bruk ditt ekte navn hvis du vil ha gevinst
+          content: ''
           font_size: 8
           spacing:
             margin: ['0', null, '0', null]
@@ -47,6 +264,11 @@ components_by_slot:
           spacing_above: none
           spacing_below: none
         type: RichText
+      layout_properties: {grid_position: 'SWMNRA,HFVGVU'}
+      name: team_card
+      properties: {role: elevated-card}
+      type: ColumnPanel
+    - components:
       - components:
         - name: label_3
           properties: {text: 'Medlem av team:', visible: true}
@@ -57,20 +279,24 @@ components_by_slot:
         - name: team_medlem
           properties: {}
           type: Label
-        - event_bindings: {click: locked_click}
-          layout_properties: {}
-          name: locked
-          properties: {icon: 'fa:unlock', text: '', tooltip: Låsing for nye medlemmer}
+        - event_bindings: {click: lagre_button_click}
+          name: lagre_button
+          properties: {role: filled-button, text: Lagre}
           type: Button
-        layout_properties: {grid_position: 'PSOJXE,PRTTWU'}
+        layout_properties: {grid_position: 'EWEXAQ,TIIHWN'}
         name: flow_panel_5
         properties: {align: center}
         type: FlowPanel
-      - layout_properties: {grid_position: 'ZRMTGO,KNQDXT'}
+      - components:
+        - event_bindings: {click: locked_click}
+          name: locked
+          properties: {icon: 'fa:unlock', text: '', tooltip: Låsing for nye medlemmer}
+          type: Button
+        layout_properties: {grid_position: 'YWWSIX,VHNCRA'}
         name: rich_text_2_copy
         properties:
           align: center
-          content: Hvis det er mer enn tre medlemmer på laget ditt kan du låse det for nye medlemmer ved å klikke på hengelåsen.
+          content: Hvis det er mer enn tre medlemmer på laget ditt kan du låse det for inn- og utmeldinger ved å klikke på hengelåsen.
           font_size: 8
           spacing:
             margin: ['0', null, '0', null]
@@ -78,26 +304,10 @@ components_by_slot:
           spacing_above: none
           spacing_below: none
         type: RichText
-      - components:
-        - event_bindings: {click: angre_button_click}
-          layout_properties: {}
-          name: angre_button
-          properties: {role: filled-button, text: Angre}
-          type: Button
-        - event_bindings: {click: lagre_button_click}
-          layout_properties: {}
-          name: lagre_button
-          properties: {role: filled-button, text: Lagre}
-          type: Button
-        layout_properties: {grid_position: 'OIYBEQ,ELPCXS'}
-        name: flow_panel_4
-        properties: {align: center}
-        type: FlowPanel
-      layout_properties: {grid_position: 'HEYYWW,CQSZEU'}
-      name: outlined_card_2
-      properties: {role: elevated-card}
-      type: ColumnPanel
-    - components:
+      - layout_properties: {grid_position: 'PMAWTV,ALKICA'}
+        name: divider_1
+        properties: {}
+        type: form:dep_91t3sowbnwbk:_Components.Divider
       - components:
         - layout_properties: {}
           name: label_4
@@ -130,7 +340,7 @@ components_by_slot:
           spacing_below: none
         type: RichText
       layout_properties: {grid_position: 'RVMCJK,BXLFUS'}
-      name: outlined_card_3
+      name: lag_team_panel
       properties: {role: elevated-card}
       type: ColumnPanel
     layout_properties: {}
