--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -8,10 +8,11 @@ components:
     name: text_area_17_copy_copy_copy_copy_copy
     properties:
       font_size: 10
-      height: 30.818206787109375
+      height: 66.66665649414062
       text: |-
         30/4 Laget en badge nr 10.
         Laget rutine for initiell liga-fordeling
+        Lage en bedre Min Side med deetaljer om plassering og team.
     type: TextArea
   - layout_properties: {grid_position: 'DVOSAK,KDDOER'}
     name: text_area_17_copy_copy_copy_copy
