--- a/client_code/team_medlemmer/RowTemplate4/form_template.yaml
+++ b/client_code/team_medlemmer/RowTemplate4/form_template.yaml
@@ -3,40 +3,48 @@ components:
   - {code: 'self.item[''navn'']', property: text, writeback: false}
   layout_properties: {column: JKSDUP}
   name: navn_label
-  properties: {}
+  properties:
+    spacing:
+      padding: ['0', null, '0', null]
   type: Label
 - data_bindings:
   - {code: 'self.item[''poeng'']', property: text, writeback: false}
   layout_properties: {column: MHDFRT}
   name: poeng_label
-  properties: {}
+  properties:
+    spacing:
+      padding: ['0', null, '0', null]
   type: Label
 - data_bindings:
   - {code: 'self.item[''bonus'']', property: text, writeback: false}
   layout_properties: {column: JXEGFN}
   name: bonus_label
-  properties: {}
+  properties:
+    spacing:
+      padding: ['0', null, '0', null]
   type: Label
 - data_bindings:
   - {code: 'self.item[''lengste_streak'']', property: text, writeback: false}
   layout_properties: {column: ALHQYW}
   name: longest_streak_label
-  properties: {}
+  properties:
+    spacing:
+      padding: ['0', null, '0', null]
   type: Label
 - data_bindings:
   - {code: 'self.item[''score'']', property: text, writeback: false}
   layout_properties: {column: CSRZJF}
   name: score_label
-  properties: {}
+  properties:
+    spacing:
+      padding: ['0', null, '0', null]
   type: Label
-- event_bindings: {click: kikk_click}
+- data_bindings:
+  - {code: '', property: icon, writeback: false}
+  event_bindings: {click: kikk_click}
   layout_properties: {column: BGCHQZ}
   name: kikk
-  properties:
-    appearance: standard
-    icon: mi:remove_red_eye
-    icon_color: blue
-    margin: ['0', '0', '0', '0']
-  type: form:dep_91t3sowbnwbk:_Components.IconButton
+  properties: {text: Se aktiviteter}
+  type: form:dep_91t3sowbnwbk:_Components.Link
 container: {type: DataRowPanel}
 is_package: true
