--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -103,63 +103,64 @@ components_by_slot:
           name: card_1
           properties: {appearance: elevated, background_color: '', border: '', role: null}
           type: form:dep_91t3sowbnwbk:_Components.Card
-        - components:
-          - event_bindings: {mouse_down: badge_1_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
-            layout_properties: {width: 30}
-            name: badge_1
-            properties: {height: '30', source: _/theme/icons8-three-leaf-clover-48.png, tooltip: Trippel Aktiv, visible: false}
-            type: Image
-          - event_bindings: {mouse_down: badge_2_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
-            layout_properties: {width: 30}
-            name: badge_2
-            properties: {height: '30', source: _/theme/icons8-777-48.png, tooltip: Seventh heaven, visible: false}
-            type: Image
-          - event_bindings: {mouse_down: badge_3_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
-            layout_properties: {width: 30}
-            name: badge_3
-            properties: {height: '30', source: _/theme/icons8-triathlon-64.png, tooltip: Triathlon, visible: false}
-            type: Image
-          - event_bindings: {mouse_down: badge_4_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
-            layout_properties: {width: 30}
-            name: badge_4
-            properties: {height: '30', source: _/theme/icons8-habit-64.png, tooltip: Habit Master, visible: false}
-            type: Image
-          - event_bindings: {mouse_down: badge_5_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
-            layout_properties: {width: 30}
-            name: badge_5
-            properties: {height: '30', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
-            type: Image
-          - event_bindings: {mouse_down: badge_6_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
-            layout_properties: {width: 30}
-            name: badge_6
-            properties: {height: '30', source: _/theme/icons8-weekend-48.png, tooltip: Weekend Warrior, visible: false}
-            type: Image
-          - event_bindings: {}
-            layout_properties: {width: 30}
-            name: badge_7
-            properties: {height: '30', source: _/theme/icons8-first-48.png, tooltip: '', visible: false}
-            type: Image
-          - event_bindings: {}
-            layout_properties: {}
-            name: badge_8
-            properties: {height: '30', source: _/theme/icons8-second-place-ribbon-48.png, tooltip: '', visible: false}
-            type: Image
-          - event_bindings: {}
-            layout_properties: {}
-            name: badge_9
-            properties: {height: '30', source: _/theme/icons8-third-64.png, tooltip: '', visible: false}
-            type: Image
-          - event_bindings: {}
-            layout_properties: {}
-            name: badge_10
-            properties: {height: '30', source: _/theme/icons8-trophy-80.png, tooltip: '', visible: false}
-            type: Image
-          name: badge_flow_panel
-          properties: {align: center, visible: false}
-          type: FlowPanel
         layout_properties: {grid_position: 'WEIOEQ,LXHNIZ'}
         name: flow_panel_2
         properties: {align: center}
+        type: FlowPanel
+      - components:
+        - event_bindings: {mouse_down: badge_1_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+          layout_properties: {width: 30}
+          name: badge_1
+          properties: {height: '30', source: _/theme/icons8-three-leaf-clover-48.png, tooltip: Trippel Aktiv, visible: false}
+          type: Image
+        - event_bindings: {mouse_down: badge_2_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+          layout_properties: {width: 30}
+          name: badge_2
+          properties: {height: '30', source: _/theme/icons8-777-48.png, tooltip: Seventh heaven, visible: false}
+          type: Image
+        - event_bindings: {mouse_down: badge_3_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+          layout_properties: {width: 30}
+          name: badge_3
+          properties: {height: '30', source: _/theme/icons8-triathlon-64.png, tooltip: Triathlon, visible: false}
+          type: Image
+        - event_bindings: {mouse_down: badge_4_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+          layout_properties: {width: 30}
+          name: badge_4
+          properties: {height: '30', source: _/theme/icons8-habit-64.png, tooltip: Habit Master, visible: false}
+          type: Image
+        - event_bindings: {mouse_down: badge_5_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+          layout_properties: {width: 30}
+          name: badge_5
+          properties: {height: '30', source: _/theme/icons8-habit-64 (1).png, tooltip: Habit God, visible: false}
+          type: Image
+        - event_bindings: {mouse_down: badge_6_mouse_down, mouse_enter: image_mouse_enter, mouse_leave: image_mouse_leave}
+          layout_properties: {width: 30}
+          name: badge_6
+          properties: {height: '30', source: _/theme/icons8-weekend-48.png, tooltip: Weekend Warrior, visible: false}
+          type: Image
+        - event_bindings: {}
+          layout_properties: {width: 30}
+          name: badge_7
+          properties: {height: '30', source: _/theme/icons8-first-48.png, tooltip: '', visible: false}
+          type: Image
+        - event_bindings: {}
+          layout_properties: {}
+          name: badge_8
+          properties: {height: '30', source: _/theme/icons8-second-place-ribbon-48.png, tooltip: '', visible: false}
+          type: Image
+        - event_bindings: {}
+          layout_properties: {}
+          name: badge_9
+          properties: {height: '30', source: _/theme/icons8-third-64.png, tooltip: '', visible: false}
+          type: Image
+        - event_bindings: {}
+          layout_properties: {}
+          name: badge_10
+          properties: {height: '30', source: _/theme/icons8-trophy-80.png, tooltip: '', visible: false}
+          type: Image
+        layout_properties: {grid_position: 'FYCMZK,VRVNXR'}
+        name: badge_flow_panel
+        properties: {align: center, visible: false}
         type: FlowPanel
       layout_properties: {grid_position: 'ODZXPL,GWISSY'}
       name: outlined_card_4
