--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -105,6 +105,10 @@ components:
     name: badge_10
     properties: {height: '20', source: _/theme/icons8-trophy-80.png, tooltip: '', visible: false}
     type: Image
+  - layout_properties: {}
+    name: badge_11
+    properties: {height: '20', source: _/theme/icons8-terminator-24.png, tooltip: '', visible: false}
+    type: Image
   layout_properties: {column: PFFFKV}
   name: badge_flow_panel
   properties: {align: left, visible: true}
