--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -94,6 +94,11 @@ components_by_slot:
           name: sjekk_badges
           properties: {align: center, role: tonal-button, text: Recalc badges}
           type: Button
+        - event_bindings: {click: liga_opprykk_click}
+          layout_properties: {}
+          name: liga_opprykk
+          properties: {align: center, role: tonal-button, text: Liga opprykk}
+          type: Button
         layout_properties: {grid_position: 'JJWONP,QJPKHW'}
         name: flow_panel_14
         properties: {align: center}
