--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -175,6 +175,34 @@ components_by_slot:
       - components:
         - components:
           - components:
+            - layout_properties: {slot: card-content-container-slot}
+              name: text_7
+              properties: {text: Din liga}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - layout_properties: {slot: card-content-container-slot}
+              name: text_8
+              properties: {}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            layout_properties: {slot: card-content-slot}
+            name: card_content_container_1
+            properties: {}
+            type: form:dep_91t3sowbnwbk:_Components.Card.CardContentContainer
+          layout_properties: {}
+          name: card_2
+          properties: {align: center}
+          type: form:dep_91t3sowbnwbk:_Components.Card
+        layout_properties: {grid_position: 'YCDBHS,GMZRRY'}
+        name: flow_panel_4
+        properties: {align: center}
+        type: FlowPanel
+      layout_properties: {grid_position: 'YJXJLX,EXYMOM'}
+      name: liga_card
+      properties: {role: outlined-card, visible: false}
+      type: ColumnPanel
+    - components:
+      - components:
+        - components:
+          - components:
             - layout_properties: {}
               name: text_2_copy
               properties: {text: Team}
