Created liga_images/.gitkeep and liga_images/ametyst.png; Edited Homepage, Resultat_individuell.RowTemplate2 and Loggbok

--- a/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
+++ b/client_code/Resultat_individuell/RowTemplate2/form_template.yaml
@@ -15,7 +15,7 @@ components:
       icon: fa:eye
       spacing:
         margin: ['0', null, '0', null]
-        padding: [0, '0', '0', '2']
+        padding: ['8', '0', '0', '2']
       spacing_above: none
       spacing_below: none
       text: ''
