--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -54,10 +54,6 @@ components_by_slot:
             type: FlowPanel
           - components:
             - components:
-              - layout_properties: {}
-                name: label_1
-                properties: {text: 'Deltager:', visible: false}
-                type: Label
               - event_bindings: {click: leage_ikon_click}
                 layout_properties: {}
                 name: leage_ikon
@@ -88,9 +84,9 @@ components_by_slot:
               name: flow_panel_10
               properties: {}
               type: FlowPanel
-            - layout_properties: {width: 54.9875244140625}
+            - layout_properties: {width: 45.5875244140625}
               name: liga_image
-              properties: {height: 48.399993896484375}
+              properties: {height: 48.399993896484375, source: ''}
               type: Image
             layout_properties: {grid_position: 'KWZNHX,RRCDZN MSMOMO,YMBRMH'}
             name: flow_panel_3
