--- a/client_code/Loggbok/form_template.yaml
+++ b/client_code/Loggbok/form_template.yaml
@@ -86,7 +86,7 @@ components_by_slot:
               type: FlowPanel
             - layout_properties: {width: 45.5875244140625}
               name: liga_image
-              properties: {height: 48.399993896484375, source: ''}
+              properties: {height: 48.399993896484375, source: '', visible: false}
               type: Image
             layout_properties: {grid_position: 'KWZNHX,RRCDZN MSMOMO,YMBRMH'}
             name: flow_panel_3
