Edited BrukerLoggbok, Loggbok, Resultat_individuell.RowTemplate2, ServerModule1 and 3 more

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -119,26 +119,12 @@ db_schema:
       type: number
     server: full
     title: Konkurranse
-  leages:
-    client: search
-    columns:
-    - admin_ui: {order: 0, width: 200}
-      name: leage
-      type: string
-    - admin_ui: {order: 1, width: 200}
-      name: ikon
-      type: string
-    - admin_ui: {order: 2, width: 200}
-      name: level
-      type: number
-    server: full
-    title: leages
-  league_opprykk:
+  liga_opprykk:
     client: search
     columns:
     - admin_ui: {order: 1, width: 200}
-      name: league
-      target: leages
+      name: liga
+      target: ligaer
       type: link_single
     - admin_ui: {order: 2, width: 200}
       name: status
@@ -154,7 +140,7 @@ db_schema:
       name: opprykk
       type: string
     server: full
-    title: league_opprykk
+    title: liga_opprykk
   liga_opprykk_bonus:
     client: none
     columns:
@@ -167,6 +153,20 @@ db_schema:
       type: number
     server: full
     title: liga_opprykk_bonus
+  ligaer:
+    client: search
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: liga
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: ikon
+      type: string
+    - admin_ui: {order: 2, width: 200}
+      name: level
+      type: number
+    server: full
+    title: ligaer
   ny_aktivitet:
     client: search
     columns:
@@ -276,8 +276,8 @@ db_schema:
       name: skritt_first
       type: bool
     - admin_ui: {order: 8, width: 200}
-      name: leage
-      target: leages
+      name: liga
+      target: ligaer
       type: link_single
     - admin_ui: {order: 9, width: 200}
       name: poeng
