--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -177,11 +177,23 @@ components_by_slot:
           - components:
             - layout_properties: {slot: card-content-container-slot}
               name: text_7
-              properties: {text: Din liga}
+              properties: {align: center, text: Din liga}
               type: form:dep_91t3sowbnwbk:_Components.Text
             - layout_properties: {slot: card-content-container-slot}
-              name: text_8
-              properties: {}
+              name: liga_navn
+              properties: {align: center}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - layout_properties: {slot: card-content-container-slot}
+              name: liga_image
+              properties: {display_mode: shrink_to_fit, height: '45'}
+              type: Image
+            - layout_properties: {slot: card-content-container-slot}
+              name: opprykk_symbol
+              properties: {align: center}
+              type: form:dep_91t3sowbnwbk:_Components.Text
+            - layout_properties: {slot: card-content-container-slot}
+              name: opprykk_beskrivelse
+              properties: {align: center}
               type: form:dep_91t3sowbnwbk:_Components.Text
             layout_properties: {slot: card-content-slot}
             name: card_content_container_1
@@ -189,7 +201,7 @@ components_by_slot:
             type: form:dep_91t3sowbnwbk:_Components.Card.CardContentContainer
           layout_properties: {}
           name: card_2
-          properties: {align: center}
+          properties: {align: center, visible: true}
           type: form:dep_91t3sowbnwbk:_Components.Card
         layout_properties: {grid_position: 'YCDBHS,GMZRRY'}
         name: flow_panel_4
@@ -197,7 +209,7 @@ components_by_slot:
         type: FlowPanel
       layout_properties: {grid_position: 'YJXJLX,EXYMOM'}
       name: liga_card
-      properties: {role: outlined-card, visible: false}
+      properties: {role: outlined-card, visible: true}
       type: ColumnPanel
     - components:
       - components:
