--- a/anvil.yaml
+++ b/anvil.yaml
@@ -344,10 +344,10 @@ runtime_options:
   server_version: python3-sandbox
   version: 3
 scheduled_tasks:
-- job_id: GGPDYCYJ
+- job_id: GOUEGRBD
   task_name: nightly_streak_recalc
   time_spec:
-    at: {minute: 18}
+    at: {minute: 30}
     every: hour
     n: 1
 secrets:
