--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -98,7 +98,12 @@ components_by_slot:
         - event_bindings: {click: liga_opprykk_click}
           layout_properties: {}
           name: liga_opprykk
-          properties: {align: center, role: tonal-button, text: Liga opprykk}
+          properties: {align: center, role: tonal-button, text: sett Liga opprykkstatus}
+          type: Button
+        - event_bindings: {click: liga_opprykk_copy_click}
+          layout_properties: {}
+          name: utfor_opprykk
+          properties: {align: center, role: tonal-button, text: Utfør liga opprykk}
           type: Button
         layout_properties: {grid_position: 'JJWONP,QJPKHW'}
         name: flow_panel_14
