--- a/anvil.yaml
+++ b/anvil.yaml
@@ -151,6 +151,19 @@ db_schema:
     - admin_ui: {order: 1, width: 200}
       name: opprykk_bonus
       type: number
+    - admin_ui: {width: 200}
+      name: date
+      type: datetime
+    - admin_ui: {width: 200}
+      name: informert
+      type: bool
+    - admin_ui: {width: 200}
+      name: status
+      type: string
+    - admin_ui: {width: 200}
+      name: til_liga
+      target: ligaer
+      type: link_single
     server: full
     title: liga_opprykk_bonus
   ligaer:
