--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -100,6 +100,11 @@ components_by_slot:
           name: liga_opprykk
           properties: {align: center, role: tonal-button, text: Liga opprykk}
           type: Button
+        - event_bindings: {click: gjennomfor_ligabytte_click}
+          layout_properties: {}
+          name: gjennomfor_ligabytte
+          properties: {align: center, role: tonal-button, text: Gjennomfør ligabytte}
+          type: Button
         layout_properties: {grid_position: 'JJWONP,QJPKHW'}
         name: flow_panel_14
         properties: {align: center}
