Edited settings, ServerModule1, admin and Loggbok

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -142,7 +142,7 @@ db_schema:
     server: full
     title: liga_opprykk
   liga_opprykk_bonus:
-    client: none
+    client: full
     columns:
     - admin_ui: {order: 0, width: 200}
       name: user
@@ -357,12 +357,18 @@ runtime_options:
   server_version: python3-sandbox
   version: 3
 scheduled_tasks:
-- job_id: GGPDYCYJ
+- job_id: GPDHMARM
+  task_name: nightly_badge_check
+  time_spec:
+    at: {minute: 0}
+    every: hour
+    n: 8
+- job_id: DAHMFDBX
   task_name: nightly_streak_recalc
   time_spec:
-    at: {minute: 18}
+    at: {minute: 30}
     every: hour
-    n: 1
+    n: 8
 secrets:
   openai_key:
     type: secret
