--- a/anvil.yaml
+++ b/anvil.yaml
@@ -96,6 +96,20 @@ db_schema:
       type: string
     server: full
     title: Files
+  framo_selskap:
+    client: none
+    columns:
+    - admin_ui: {order: 0, width: 200}
+      name: navn
+      type: string
+    - admin_ui: {order: 1, width: 200}
+      name: score
+      type: number
+    - admin_ui: {order: 2, width: 200}
+      name: plassering
+      type: number
+    server: full
+    title: framo_selskap
   konkurranse:
     client: search
     columns:
