--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -105,6 +105,11 @@ components_by_slot:
           name: gjennomfor_ligabytte
           properties: {align: center, role: tonal-button, text: Gjennomfør ligabytte}
           type: Button
+        - event_bindings: {click: gjennomfor_ligabytte_copy_click}
+          layout_properties: {}
+          name: gjennomfor_ligabytte_copy
+          properties: {align: center, role: tonal-button, text: Beregn bonus}
+          type: Button
         layout_properties: {grid_position: 'JJWONP,QJPKHW'}
         name: flow_panel_14
         properties: {align: center}
