--- a/anvil.yaml
+++ b/anvil.yaml
@@ -97,7 +97,7 @@ db_schema:
     server: full
     title: Files
   framo_selskap:
-    client: none
+    client: search
     columns:
     - admin_ui: {order: 0, width: 200}
       name: navn
@@ -318,6 +318,10 @@ db_schema:
     - admin_ui: {order: 2.5, width: 119}
       name: team_plassering
       type: number
+    - admin_ui: {order: 11, width: 200}
+      name: framo_selskap
+      target: framo_selskap
+      type: link_single
     server: full
     title: userinfo
   users:
