Edited settings, ServerModule1, endringslogg and minside

--- a/client_code/endringslogg/form_template.yaml
+++ b/client_code/endringslogg/form_template.yaml
@@ -12,6 +12,7 @@ components:
       text: |-
         1/5 Optimalisert beregning av poeng og bonus om natten
         VIser liga og opprykkstatus
+        La inn Framo selskap for å kunne konkurere mellom selskap
     type: TextArea
   - layout_properties: {grid_position: 'ZKRXXP,THLMNF'}
     name: text_area_17_copy_copy_copy_copy_copy
