--- a/client_code/minside/form_template.yaml
+++ b/client_code/minside/form_template.yaml
@@ -20,6 +20,10 @@ components_by_slot:
         - name: navn_textbox
           properties: {}
           type: TextBox
+        - event_bindings: {change: framo_selskap_drop_change}
+          name: framo_selskap_drop
+          properties: {}
+          type: DropDown
         layout_properties: {grid_position: 'BKGLUF,WHBSER'}
         name: flow_panel_3
         properties: {align: center}
