--- a/client_code/Resultat_individuell/form_template.yaml
+++ b/client_code/Resultat_individuell/form_template.yaml
@@ -5,7 +5,7 @@ components_by_slot:
     name: tabs_1
     properties:
       active_tab_index: 0
-      tab_titles: [Individuell, Team]
+      tab_titles: [Individuell, Team, Framo-selskap]
     type: form:dep_f5o4wvd4wmhr6n:Tabs
   - layout_properties: {}
     name: divider_1
@@ -38,6 +38,27 @@ components_by_slot:
     layout_properties: {}
     name: individuell_card
     properties: {role: tonal-card}
+    type: ColumnPanel
+  - components:
+    - layout_properties: {grid_position: 'VSIOCY,ZJWBHG'}
+      name: label_1_copy_copy
+      properties: {align: center, role: headline, text: Poengstilling Framoselskap}
+      type: Label
+    - components:
+      - name: framo_repeating_panel
+        properties: {item_template: Resultat_individuell.RowTemplate12}
+        type: RepeatingPanel
+      layout_properties: {grid_position: 'RGKFVO,IDHSOD'}
+      name: data_grid_2
+      properties:
+        columns:
+        - {data_key: column_1, id: ZRPWSD, title: Selskap}
+        - {data_key: column_2, id: EUESHV, title: Antall delt.}
+        - {data_key: column_3, id: PYAORK, title: Snittscore}
+      type: DataGrid
+    layout_properties: {}
+    name: framo_card
+    properties: {role: tonal-card, visible: false}
     type: ColumnPanel
   - components:
     - layout_properties: {grid_position: 'MTSGUN,FHFTBQ'}
