--- a/client_code/admin/form_template.yaml
+++ b/client_code/admin/form_template.yaml
@@ -67,6 +67,11 @@ components_by_slot:
         name: poeng_pr_selskap
         properties: {role: tonal-button, text: poeng pr selskap}
         type: Button
+      - event_bindings: {click: lag_en_bruker_click}
+        layout_properties: {}
+        name: lag_en_bruker
+        properties: {role: tonal-button, text: lag en bruker}
+        type: Button
       layout_properties: {grid_position: 'PDOHFX,TLMROV'}
       name: flow_panel_1
       properties: {align: center}
