Created teknisk_feil and teknisk-feil-nrk-retro-logo-png_seeklogo-237277.png; Edited settings

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -38,6 +38,7 @@ unique_ids:
     relax.png: '1743409632679138225943962.50644'
     rsz_rubin.png: '1746107436357706268727642.7817'
     standard-page.html: FWNBRYTQ5FYKRMFR5TQCDTKGH36EROKJ
+    teknisk-feil-nrk-retro-logo-png_seeklogo-237277.png: '174647794998568768330410.51144'
     theme.css: 4XELZEEUTVXOLQDXMJPQ3IRQPNKSRQ3I
     treninger.png: '1745230365827697812319959.8256'
     walking.svg: '1743356575598423980038540.64557'
@@ -79,6 +80,7 @@ unique_ids:
     minside: '174559148220953451501125.48469'
     team_medlemmer: '1745591607280757516596998.0676'
     team_medlemmer.RowTemplate4: '1742417606431323896215273.31647'
+    teknisk_feil: '1746477840540263116694864.13892'
   modules:
     Globals: '1745434925690579308358414.0474'
   scripts: {}
