--- a/anvil.yaml
+++ b/anvil.yaml
@@ -414,5 +414,5 @@ services:
 - client_config: {}
   server_config: {}
   source: /runtime/services/anvil/secrets.yml
-startup: {module: teknisk_feil, type: form}
+startup: {module: Login, type: form}
 startup_form: null
